# avk

./: .dir-locals.el  CMakeLists.txt  main.cpp
libavk/: CMakeLists.txt
libavk/include/: avk.h  component.h  componentinterface.h  crc32.hpp  entity.h  entityinterface.h  log.h  meshcomponent.h  rendercomponent.h  spriteentity.h  types.h  util.h  vulkan.h  window.h  world.h
libavk/src/: avk.cpp  entity.cpp  meshcomponent.cpp  rendercomponent.cpp  spriteentity.cpp  vulkan.cpp  world.cpp
